--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.0.4",
     "node-sass": "^4.7.2",
+    "ramda": "^0.25.0",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
